Add Davie et al 2018 case study

--- a/daviek_2018/10x_bbknn_scenic.config
+++ b/daviek_2018/10x_bbknn_scenic.config
@@ -10,7 +10,7 @@ manifest {
 
 params {
    global {
-      project_name = '580f1168_20200313__Hung_et_al_2020_Adult_Gut'
+      project_name = '5a3ba000_20200313__Davie_Janssens_Koldere_et_al_2018_Adult_Brain'
       outdir = 'out'
       qsubaccount = '' // TO EDIT
       qsubemail = '' // TO EDIT
@@ -24,7 +24,7 @@ params {
          genome = 'Flybase r6.31 pre-mRNA v3.1 (https://github.com/FlyCellAtlas/genome_references/blob/master/flybase/r6.31/dmel-all-r6.31-premrna.gtf.gz)'
          tree {
             level_1 = 'Public'
-            level_2 = 'Gut'
+            level_2 = 'Brain'
             level_3 = 'Adult'
          }
       }
@@ -147,7 +147,7 @@ params {
             numWorkers = 19
             motifsDb = 'cistarget/databases/drosophila_melanogaster/dm6/flybase_r6.02/mc8nr/gene_based/dm6-5kb-upstream-full-tx-11species.mc8nr.feather' // TO EDIT
             motifsAnnotation = 'databases/cistarget/motif2tf/motifs-v8-nr.flybase-m0.001-o0.0.tbl' // TO EDIT
-            tracksDb = 'encode_modERN_20190621__ChIP_seq.max_GENEBASED.feather' // TO EDIT
+            tracksDb = 'encode_modERN_20190621__ChIP_seq.max_GENEBASED.feather' // TO EDIT 
             tracksAnnotation = 'encode_modERN_20190621_dm6_annotation.track_to_tf_in_motif_to_tf_format.tsv' // TO EDIT
          }
          aucell {
@@ -204,7 +204,7 @@ params {
        return [global: paramsGlobal, local: pL]
    }
    data {
-      sra = [[id:'SRP162698', samples: ["10x*"]]]
+      sra = [[id:'SRP125768', samples: ["DGRP-551_.*d_r[0-9]+(?! )", "w1118_.*d_r[0-9]+(?! )"]]]
    }
    sratoolkit {
       container = 'vibsinglecellnf/sratoolkit:2.9.4-1.1.0'
