Fix errata for stage of samples in Ji T et al., 2019 case study

--- a/jit_2019/10x_bbknn_scenic.config
+++ b/jit_2019/10x_bbknn_scenic.config
@@ -10,7 +10,7 @@ manifest {
 
 params {
    global {
-      project_name = '63d972e0_20200313__Ji_et_al_2019_Embryo_Wing_Disc'
+      project_name = '63d972e0_20200313__Ji_et_al_2019_Larvae_Wing_Disc'
       outdir = 'out'
       qsubaccount = '' // TO EDIT
       qsubemail = '' // TO EDIT
@@ -25,7 +25,7 @@ params {
          tree {
             level_1 = 'Public'
             level_2 = 'Wingdisc'
-            level_3 = 'Embryo'
+            level_3 = 'Larvae'
          }
       }
       file_converter {
