--- a/jit_2019/10x_harmony_scenic_append_only.config
+++ b/jit_2019/10x_harmony_scenic_append_only.config
@@ -10,7 +10,7 @@ manifest {
 
 params {
    global {
-      project_name = '63d972e0__Ji_et_al_2019_Embryo_Wing_Disc'
+      project_name = '63d972e0__Ji_et_al_2019_Larvae_Wing_Disc'
       outdir = 'out'
       seed = 142
       qsubaccount = ''
@@ -22,7 +22,7 @@ params {
          tree {
             level_1 = 'Public'
             level_2 = 'Wingdisc'
-            level_3 = 'Embryo'
+            level_3 = 'Larvae'
          }
       }
       file_converter {
@@ -108,7 +108,7 @@ params {
       scenic {
          container = 'aertslab/pyscenic:0.10.0'
          report_ipynb = '/src/scenic/bin/reports/scenic_report.ipynb'
-         existingScenicLoom = '63d972e0__Ji_et_al_2019_Embryo_Wing_Disc.BBKNN.SCENIC_SCope_output.loom' // TO EDIT
+         existingScenicLoom = '63d972e0__Ji_et_al_2019_Larvae_Wing_Disc.BBKNN.SCENIC_SCope_output.loom' // TO EDIT
          sampleSuffixWithExtension = '.BBKNN.SCENIC_SCope_output.loom'
          scenicoutdir = 'out/scenic/'
          scenicScopeOutputLoom = 'SCENIC_SCope_output.loom'
@@ -141,7 +141,7 @@ params {
    }
    data {
       tenx {
-         cellranger_mex = '20200313_007__wingdisc_embryo__63d972e0-6514-11ea-8819-a0000220fe80/out/counts/*/outs/' // TO EDIT
+         cellranger_mex = '20200313_007__wingdisc_larvae__63d972e0-6514-11ea-8819-a0000220fe80/out/counts/*/outs/' // TO EDIT
       }
    }
    pcacv {
