Updated 10x PBMC tutorial - Config file

--- a/pbmc10k/pbmc10k.vsn-pipelines.complete.config
+++ b/pbmc10k/pbmc10k.vsn-pipelines.complete.config
@@ -2,22 +2,22 @@ singularity {
    cacheDir = '/ddn1/vol1/staging/leuven/stg_00002/lcb/lcb_projects/Pipeline_Dev/containers/'
    enabled = true
    autoMounts = true
-   runOptions = '-B /ddn1/vol1/staging/leuven/stg_00002/,/staging/leuven/stg_00002/'
+   runOptions = '-B /ddn1,/staging'
 }
 
 manifest {
    name = 'vib-singlecell-nf/vsn-pipelines'
    description = 'A repository of pipelines for single-cell data in Nextflow DSL2'
    homePage = 'https://github.com/vib-singlecell-nf/vsn-pipelines'
-   version = '0.14.0'
+   version = '0.19.0'
    mainScript = 'main.nf'
    defaultBranch = 'master'
-   nextflowVersion = '!19.12.0-edge'
+   nextflowVersion = '!20.04.1'
 }
 
 params {
    global {
-      project_name = 'PBMC10k_DSL2'
+      project_name = '10x_PBMC_DSL2'
       seed = 777
       outdir = 'out'
       qsubaccount = ''
@@ -27,19 +27,12 @@ params {
          assembly = 'hg38'
       }
    }
+   misc {
+      test {
+         enabled = false
+      }
+   }
    sc {
-      scope {
-         genome = ''
-         tree {
-            level_1 = 'SCENICprotocol'
-            level_2 = 'DSL2'
-            level_3 = ''
-         }
-      }
-      file_converter {
-         tagCellWithSampleId = true
-         useFilteredMatrix = true
-      }
       scanpy {
          container = 'vibsinglecellnf/scanpy:0.5.0'
          report {
@@ -123,13 +116,20 @@ params {
          cell_id_attribute = 'CellID'
          gene_attribute = 'Gene'
          grn {
+            labels {
+               processExecutor = 'local'
+            }
             algorithm = 'grnboost2'
             pmem = '2gb'
             maxForks = 1
-            numWorkers = 20
+            numWorkers = 15
+            walltime = '23:59:59'
             tfs = '/ddn1/vol1/staging/leuven/stg_00002/lcb/cflerin/resources/allTFs_hg38.txt'
          }
          cistarget {
+            labels {
+               processExecutor = 'local'
+            }
             adj = 'adj.tsv'
             type = ''
             output = 'reg.csv'
@@ -145,50 +145,73 @@ params {
             min_genes = 20
             pmem = '2gb'
             maxForks = 1
-            numWorkers = 20
+            numWorkers = 10
+            walltime = '23:59:59'
             motifsDb = '/staging/leuven/res_00001/databases/cistarget/databases/homo_sapiens/hg38/refseq_r80/mc9nr/gene_based/hg38__refseq-r80__*feather'
             motifsAnnotation = '/staging/leuven/res_00001/databases/cistarget/motif2tf/motifs-v9-nr.hgnc-m0.001-o0.0.tbl'
             tracksDb = '/staging/leuven/res_00001/databases/cistarget/databases/homo_sapiens/hg38/refseq_r80/tc_v1/gene_based/encode_20190621__ChIP_seq_transcription_factor.hg38__refseq-r80__*feather'
             tracksAnnotation = '/staging/leuven/stg_00002/lcb/icistarget/data/annotations/homo_sapiens/hg38/track_annotations/encode_project_20190621__ChIP-seq_transcription_factor.homo_sapiens.hg38.bigwig_signal_pvalue.track_to_tf_in_motif_to_tf_format.tsv'
          }
          aucell {
+            labels {
+               processExecutor = 'local'
+            }
             output = 'aucell_output.loom'
             rank_threshold = 5000
             auc_threshold = 0.05
             nes_threshold = 3.0
             pmem = '2gb'
             maxForks = 1
-            numWorkers = 20
+            numWorkers = 15
+            walltime = '01:59:59'
          }
       }
-   }
-   utils {
-      container = 'vibsinglecellnf/utils:0.2.1'
-      workflow_configuration {
-         report_ipynb = '/src/utils/bin/reports/workflow_configuration_template.ipynb'
+      scope {
+         genome = 'hg38'
+         tree {
+            level_1 = 'SCENICprotocol'
+            level_2 = 'DSL2'
+            level_3 = ''
+         }
       }
-   }
-   parseConfig = { sample, paramsGlobal, paramsLocal ->
-        def lv = { a,b -> return MethodRankHelper.delDistance(a, b) }
-        def pL = paramsLocal.collectEntries { k,v ->
-           if (v instanceof Map) {
-                if (v.containsKey(sample))
-                   return [k, v[sample]]
-                if (v.containsKey('default'))
-                   return [k, v['default']]
-                if (lv(k,sample) > 30)
-                   return [k,v]
-                throw new Exception("Not a valid entry in " + k + ". The sample " + sample + " is not found in " + v +" ; Make sure your samples are correctly specified when using the multi-sample feature.")
-           } else {
-               return [k,v]
-           }
-       }
-       return [global: paramsGlobal, local: pL]
+      file_converter {
+         tagCellWithSampleId = true
+         useFilteredMatrix = true
+         makeVarIndexUnique = false
+      }
    }
    data {
       tenx {
-         cellranger_mex = '/ddn1/vol1/staging/leuven/stg_00002/lcb/cflerin/analysis/pbmc10k/dsl2/pbmc10k/outs'
+         cellranger_mex = '/ddn1/vol1/staging/leuven/stg_00002/lcb/cflerin/analysis/pbmc10k/dsl2_0.19.0/pbmc10k/outs'
       }
+   }
+   utils {
+      container = 'vibsinglecellnf/utils:0.3.0'
+      workflow_configuration {
+         report_ipynb = '/src/utils/bin/reports/workflow_configuration_template.ipynb'
+      }
+      publish {
+         compressionLevel = 6
+      }
+   }
+   parseConfig = { sample, paramsGlobal, paramsLocal ->
+         def lv = { a,b -> return org.codehaus.groovy.runtime.MethodRankHelper.delDistance(a, b) }
+         def pL = paramsLocal.collectEntries { k,v ->
+            if (v instanceof Map) {
+               if (v.containsKey(sample))
+                  return [k, v[sample]]
+               if (v.containsKey('default'))
+                  return [k, v['default']]
+               def closeMatches = v.collectEntries { vk, vv -> [lv(vk, sample), vk] }.keySet().findAll { it < 30}
+               if(closeMatches.size() > 0)
+                  throw new Exception("The sample " + sample + " is not found in " + v +" ; Make sure your samples are correctly specified when using the multi-sample feature.")
+               else
+                  return [k,v]
+            } else {
+               return [k,v]
+         }
+      }
+      return [global: paramsGlobal, local: pL]
    }
 }
 
