Update pbmc10k case study

--- a/pbmc10k/pbmc10k.vsn-pipelines.complete.config
+++ b/pbmc10k/pbmc10k.vsn-pipelines.complete.config
@@ -1,18 +1,18 @@
 singularity {
-   cacheDir = '/ddn1/vol1/staging/leuven/stg_00002/lcb/lcb_projects/Pipeline_Dev/containers/'
-   enabled = true
-   autoMounts = true
-   runOptions = '-B /ddn1,/staging'
+    enabled = true
+    autoMounts = true
+    runOptions = '--cleanenv -H $PWD -B /lustre1,/staging,/data,${VSC_SCRATCH}'
+    cacheDir = '/staging/leuven/res_00001/software/vsn_containers/'
 }
 
 manifest {
    name = 'vib-singlecell-nf/vsn-pipelines'
    description = 'A repository of pipelines for single-cell data in Nextflow DSL2'
    homePage = 'https://github.com/vib-singlecell-nf/vsn-pipelines'
-   version = '0.19.0'
+   version = '0.25.0'
    mainScript = 'main.nf'
    defaultBranch = 'master'
-   nextflowVersion = '!20.04.1'
+   nextflowVersion = '!>=20.10.0'
 }
 
 params {
@@ -20,8 +20,6 @@ params {
       project_name = '10x_PBMC_DSL2'
       seed = 777
       outdir = 'out'
-      qsubaccount = ''
-      qsubemail = ''
       species = 'human'
       genome {
          assembly = 'hg38'
@@ -32,9 +30,24 @@ params {
          enabled = false
       }
    }
+   utils {
+      container = 'vibsinglecellnf/utils:0.4.0'
+      publish {
+         compressionLevel = 6
+         annotateWithBatchVariableName = false
+         mode = 'link'
+      }
+   }
    sc {
+      file_converter {
+         off = 'h5ad'
+         tagCellWithSampleId = true
+         remove10xGEMWell = false
+         useFilteredMatrix = true
+         makeVarIndexUnique = false
+      }
       scanpy {
-         container = 'vibsinglecellnf/scanpy:0.5.0'
+         container = 'vibsinglecellnf/scanpy:0.5.2'
          report {
             annotations_to_plot = []
          }
@@ -68,11 +81,11 @@ params {
             }
             tsne {
                method = 'tsne'
-               nJobs = 10
                off = 'h5ad'
             }
          }
          clustering {
+            preflight_checks = true
             report_ipynb = '/src/scanpy/bin/reports/sc_clustering_report.ipynb'
             method = 'louvain'
             resolutions = [0.4,0.8]
@@ -86,6 +99,7 @@ params {
          }
          filter {
             report_ipynb = '/src/scanpy/bin/reports/sc_filter_qc_report.ipynb'
+            cellFilterStrategy = 'fixedthresholds'
             cellFilterMinNGenes = 200
             cellFilterMaxNGenes = 4000
             cellFilterMaxPercentMito = 0.15
@@ -104,35 +118,24 @@ params {
          }
       }
       scenic {
-         container = 'aertslab/pyscenic:0.10.0'
+         container = 'aertslab/pyscenic:0.10.4'
          scenicoutdir = 'out/scenic/'
-         report_ipynb = '/src/scenic/bin/reports/scenic_report.ipynb'
          filteredLoom = ''
          scenicOutputLoom = 'SCENIC_output.loom'
          scenicScopeOutputLoom = 'SCENIC_SCope_output.loom'
          mode = 'dask_multiprocessing'
          client_or_address = ''
-         numWorkers = 20
          cell_id_attribute = 'CellID'
          gene_attribute = 'Gene'
+         report_ipynb = '/src/scenic/bin/reports/scenic_report.ipynb'
+         skipReports = false
          grn {
-            labels {
-               processExecutor = 'local'
-            }
             algorithm = 'grnboost2'
-            pmem = '2gb'
-            maxForks = 1
-            numWorkers = 15
-            walltime = '23:59:59'
             tfs = '/ddn1/vol1/staging/leuven/stg_00002/lcb/cflerin/resources/allTFs_hg38.txt'
          }
          cistarget {
-            labels {
-               processExecutor = 'local'
-            }
             adj = 'adj.tsv'
             type = ''
-            output = 'reg.csv'
             rank_threshold = 5000
             auc_threshold = 0.05
             nes_threshold = 3.0
@@ -143,27 +146,17 @@ params {
             top_n_targets = 50
             top_n_regulators = '5,10,50'
             min_genes = 20
-            pmem = '2gb'
-            maxForks = 1
-            numWorkers = 10
-            walltime = '23:59:59'
+            all_modules = false
             motifsDb = '/staging/leuven/res_00001/databases/cistarget/databases/homo_sapiens/hg38/refseq_r80/mc9nr/gene_based/hg38__refseq-r80__*feather'
             motifsAnnotation = '/staging/leuven/res_00001/databases/cistarget/motif2tf/motifs-v9-nr.hgnc-m0.001-o0.0.tbl'
             tracksDb = '/staging/leuven/res_00001/databases/cistarget/databases/homo_sapiens/hg38/refseq_r80/tc_v1/gene_based/encode_20190621__ChIP_seq_transcription_factor.hg38__refseq-r80__*feather'
             tracksAnnotation = '/staging/leuven/stg_00002/lcb/icistarget/data/annotations/homo_sapiens/hg38/track_annotations/encode_project_20190621__ChIP-seq_transcription_factor.homo_sapiens.hg38.bigwig_signal_pvalue.track_to_tf_in_motif_to_tf_format.tsv'
          }
          aucell {
-            labels {
-               processExecutor = 'local'
-            }
             output = 'aucell_output.loom'
             rank_threshold = 5000
             auc_threshold = 0.05
             nes_threshold = 3.0
-            pmem = '2gb'
-            maxForks = 1
-            numWorkers = 15
-            walltime = '01:59:59'
          }
       }
       scope {
@@ -174,54 +167,61 @@ params {
             level_3 = ''
          }
       }
-      file_converter {
-         tagCellWithSampleId = true
-         useFilteredMatrix = true
-         makeVarIndexUnique = false
-      }
    }
    data {
       tenx {
-         cellranger_mex = '/ddn1/vol1/staging/leuven/stg_00002/lcb/cflerin/analysis/pbmc10k/dsl2_0.19.0/pbmc10k/outs'
+         cellranger_mex = 'pbmc10k/dsl2_0.19.0/pbmc10k/outs'
       }
-   }
-   utils {
-      container = 'vibsinglecellnf/utils:0.3.0'
-      workflow_configuration {
-         report_ipynb = '/src/utils/bin/reports/workflow_configuration_template.ipynb'
-      }
-      publish {
-         compressionLevel = 6
-      }
-   }
-   parseConfig = { sample, paramsGlobal, paramsLocal ->
-         def lv = { a,b -> return org.codehaus.groovy.runtime.MethodRankHelper.delDistance(a, b) }
-         def pL = paramsLocal.collectEntries { k,v ->
-            if (v instanceof Map) {
-               if (v.containsKey(sample))
-                  return [k, v[sample]]
-               if (v.containsKey('default'))
-                  return [k, v['default']]
-               def closeMatches = v.collectEntries { vk, vv -> [lv(vk, sample), vk] }.keySet().findAll { it < 30}
-               if(closeMatches.size() > 0)
-                  throw new Exception("The sample " + sample + " is not found in " + v +" ; Make sure your samples are correctly specified when using the multi-sample feature.")
-               else
-                  return [k,v]
-            } else {
-               return [k,v]
-         }
-      }
-      return [global: paramsGlobal, local: pL]
    }
 }
 
 process {
    executor = 'local'
-   withLabel:qsub {
-      executor = 'pbs'
+   withLabel:'compute_resources__.*|compute_resources__default' {
+      cpus = 2
+      memory = '60 GB'
+      time = '1h'
+      clusterOptions = '-A cluster_account'
    }
-   withLabel:local {
-      executor = 'local'
+   withLabel:compute_resources__minimal {
+      cpus = 1
+      memory = '1 GB'
+   }
+   withLabel:compute_resources__mem {
+      cpus = 4
+      memory = '160 GB'
+   }
+   withLabel:compute_resources__cpu {
+      cpus = 20
+      memory = '80 GB'
+   }
+   withLabel:compute_resources__report {
+      maxForks = 2
+      cpus = 1
+      memory = '160 GB'
+   }
+   withLabel:compute_resources__24hqueue {
+      time = '24h'
+   }
+   withLabel:'compute_resources__scenic.*' {
+      cpus = 4
+      memory = '60 GB'
+      time = '24h'
+      maxForks = 1
+   }
+   withLabel:compute_resources__scenic_grn {
+      executor = 'pbs'
+      cpus = 20 
+      memory = '120 GB'
+      time = '24h'
+   }
+   withLabel:compute_resources__scenic_cistarget {
+      cpus = 20
+      memory = '80 GB'
+   }
+   withLabel:compute_resources__scenic_aucell {
+      cpus = 20
+      memory = '80 GB'
    }
 }
 
