Add pbmc10k scenic multiruns case study

--- a/pbmc10k/pbmc10k.vsn-pipelines.scenic-multiruns.complete.config
+++ b/pbmc10k/pbmc10k.vsn-pipelines.scenic-multiruns.complete.config
@@ -1,8 +1,8 @@
 singularity {
-    enabled = true
-    autoMounts = true
-    runOptions = '--cleanenv -H $PWD -B /lustre1,/staging,/data,${VSC_SCRATCH}'
-    cacheDir = '/staging/leuven/res_00001/software/vsn_containers/'
+   cacheDir = '/staging/leuven/res_00001/software/vsn_containers/'
+   enabled = true
+   autoMounts = true
+   runOptions = '-B /ddn1/vol1/staging/leuven/stg_00002/,/staging/leuven/stg_00002/'
 }
 
 manifest {
@@ -17,7 +17,7 @@ manifest {
 
 params {
    global {
-      project_name = '10x_PBMC_DSL2'
+      project_name = '10x_PBMC_multiruns_DSL2'
       seed = 777
       outdir = 'out'
       species = 'human'
@@ -157,13 +157,21 @@ params {
             rank_threshold = 5000
             auc_threshold = 0.05
             nes_threshold = 3.0
+            min_genes_regulon = 5
+            min_regulon_gene_occurrence = 5
+         }
+         numRuns = 100
+         aggregate_features {
+            use_chunking = true
+            output_format = 'csv'
+            compression = 'gzip'
          }
       }
       scope {
-         genome = 'hg38'
+         genome = ''
          tree {
-            level_1 = 'SCENICprotocol'
-            level_2 = 'DSL2'
+            level_1 = ''
+            level_2 = ''
             level_3 = ''
          }
       }
@@ -210,18 +218,25 @@ process {
       maxForks = 1
    }
    withLabel:compute_resources__scenic_grn {
-      executor = 'pbs'
-      cpus = 20 
+      cpus = 4
       memory = '120 GB'
       time = '24h'
    }
    withLabel:compute_resources__scenic_cistarget {
-      cpus = 20
+      cpus = 4
       memory = '80 GB'
    }
    withLabel:compute_resources__scenic_aucell {
-      cpus = 20
+      cpus = 4
       memory = '80 GB'
+   }
+   withLabel:'compute_resources__scenic_multiruns.*' {
+      cpus = 4
+      memory = '60 GB'
+      time = '24h'
+   }
+   withLabel:compute_resources__scenic_multiruns_motifs2regulons {
+      memory = '60 GB'
    }
 }
 
