--- a/guox_2019/10x_bbknn_scenic.config
+++ b/guox_2019/10x_bbknn_scenic.config
@@ -2,15 +2,15 @@ manifest {
    name = 'vib-singlecell-nf/vsn-pipelines'
    description = 'A repository of pipelines for single-cell data in Nextflow DSL2'
    homePage = 'https://github.com/vib-singlecell-nf/vsn-pipelines'
-   version = '0.15.0'
+   version = '0.27.0'
    mainScript = 'main.nf'
    defaultBranch = 'master'
-   nextflowVersion = '!19.12.0-edge'
+   nextflowVersion = '!>=21.04.3'
 }
 
 params {
    global {
-      project_name = '5f0add30_20200313__Guo_et_al_2019_Adult_Gut'
+      project_name = 'Guo_et_al_2019_Adult_Gut'
       outdir = 'out'
       qsubaccount = '' // TO EDIT
       qsubemail = '' // TO EDIT
@@ -18,14 +18,17 @@ params {
       genome {
          assembly = 'dm6'
       }
+      seed = 42
    }
-   sc {
-      scope {
-         genome = 'Flybase r6.31 pre-mRNA v3.1 (https://github.com/FlyCellAtlas/genome_references/blob/master/flybase/r6.31/dmel-all-r6.31-premrna.gtf.gz)'
-         tree {
-            level_1 = 'Public'
-            level_2 = 'Gut'
-            level_3 = 'Adult'
+   data {
+      sra = [[id:'SRP200614', samples: ["*"]]]
+   }
+   tools {
+      cellranger {
+         container = 'vibsinglecellnf/cellranger:4.0.0'
+         count {
+            chemistry = 'SC3Pv2'
+            transcriptome = 'flybase/r6.31_premrna_v3/cellranger/3.1.0/flybase_r6.31_premrna_v3.1'
          }
       }
       file_converter {
@@ -36,8 +39,13 @@ params {
          join = 'outer'
          off = 'h5ad'
       }
+      sratoolkit {
+         container = 'vibsinglecellnf/sratoolkit:2.9.4-1.1.0'
+         includeTechnicalReads = false
+         maxSize = 20000000
+      }
       scanpy {
-         container = 'vibsinglecellnf/scanpy:0.5.0'
+         container = 'vibsinglecellnf/scanpy:1.8.1'
          report {
             annotations_to_plot = []
          }
@@ -98,7 +106,7 @@ params {
          }
          normalization {
             method = 'cpx'
-            countsPerCellAfter = 10000
+            targetSum = 10000
             off = 'h5ad'
          }
          batch_effect_correct {
@@ -109,8 +117,14 @@ params {
             off = 'h5ad'
          }
       }
+      pcacv {
+         container = 'vibsinglecellnf/pcacv:0.3.0'
+         find_optimal_npcs {
+            accessor = '@assays$RNA@scale.data'
+         }
+      }
       scenic {
-         container = 'aertslab/pyscenic:0.10.0'
+         container = 'aertslab/pyscenic:0.11.2'
          scenicoutdir = 'out/scenic/'
          report_ipynb = '/src/scenic/bin/reports/scenic_report.ipynb'
          filteredLoom = ''
@@ -118,14 +132,10 @@ params {
          scenicScopeOutputLoom = 'SCENIC_SCope_output.loom'
          mode = 'dask_multiprocessing'
          client_or_address = ''
-         numWorkers = 19
          cell_id_attribute = 'CellID'
          gene_attribute = 'Gene'
          grn {
             algorithm = 'grnboost2'
-            pmem = '2gb'
-            maxForks = 5
-            numWorkers = 19
             tfs = 'allTFs_dmel.txt' // TO EDIT
          }
          cistarget {
@@ -142,9 +152,6 @@ params {
             top_n_targets = 50
             top_n_regulators = '5,10,50'
             min_genes = 20
-            pmem = '2gb'
-            maxForks = 5
-            numWorkers = 19
             motifsDb = 'cistarget/databases/drosophila_melanogaster/dm6/flybase_r6.02/mc8nr/gene_based/dm6-5kb-upstream-full-tx-11species.mc8nr.feather' // TO EDIT
             motifsAnnotation = 'cistarget/motif2tf/motifs-v8-nr.flybase-m0.001-o0.0.tbl' // TO EDIT
             tracksDb = 'encode_modERN_20190621__ChIP_seq.max_GENEBASED.feather' // TO EDIT
@@ -155,30 +162,19 @@ params {
             rank_threshold = 5000
             auc_threshold = 0.05
             nes_threshold = 3.0
-            pmem = '2gb'
-            maxForks = 5
-            numWorkers = 19
          }
       }
-      cellranger {
-         container = 'vibsinglecellnf/cellranger:3.1.0'
-         labels {
-            processExecutor = 'qsub'
-         }
-         count {
-            chemistry = 'SC3Pv2'
-            transcriptome = 'flybase/r6.31_premrna_v3/cellranger/3.1.0/flybase_r6.31_premrna_v3.1' // TO EDIT
-            ppn = 19
-            pmem = '6gb'
-            walltime = '48:00:00'
-            localCores = 19
-            localMem = 115
-            maxForks = 5
+      scope {
+         genome = 'Flybase r6.31 pre-mRNA v3.1 (https://github.com/FlyCellAtlas/genome_references/blob/master/flybase/r6.31/dmel-all-r6.31-premrna.gtf.gz)'
+         tree {
+            level_1 = 'Public'
+            level_2 = 'Gut'
+            level_3 = 'Adult'
          }
       }
    }
    utils {
-      container = 'vibsinglecellnf/utils:0.2.2'
+      container = 'vibsinglecellnf/utils:0.4.0'
       workflow_configuration {
          report_ipynb = '/src/utils/bin/reports/workflow_configuration_template.ipynb'
       }
@@ -186,49 +182,69 @@ params {
          mode = 'web'
       }
    }
-   parseConfig = { sample, paramsGlobal, paramsLocal ->
-        def lv = { a,b -> return MethodRankHelper.delDistance(a, b) }
-        def pL = paramsLocal.collectEntries { k,v ->
-           if (v instanceof Map) {
-                if (v.containsKey(sample))
-                   return [k, v[sample]]
-                if (v.containsKey('default'))
-                   return [k, v['default']]
-                if (lv(k,sample) > 30)
-                   return [k,v]
-                throw new Exception("Not a valid entry in " + k + ". The sample " + sample + " is not found in " + v +" ; Make sure your samples are correctly specified when using the multi-sample feature.")
-           } else {
-               return [k,v]
-           }
-       }
-       return [global: paramsGlobal, local: pL]
-   }
-   data {
-      sra = [[id:'SRP200614', samples: ["*"]]]
-   }
-   sratoolkit {
-      container = 'vibsinglecellnf/sratoolkit:2.9.4-1.1.0'
-      downloadFastqs {
-         threads = 6
-         maxForks = 5
-      }
-   }
-   pcacv {
-      container = 'vibsinglecellnf/pcacv:0.1.0'
-      find_optimal_npcs {
-         accessor = '@assays$RNA@scale.data'
-         nCores = 12
-      }
-   }
 }
 
 process {
    executor = 'local'
-   withLabel:qsub {
+   withLabel: 'compute_resources__cellranger_count' {
+        executor = 'pbs' // or 'local'
+        cpus = 20
+        memory = '120 GB'
+        time = '48h'
+        maxForks = 5
+   }
+   withLabel:'compute_resources__.*|compute_resources__default' {
+      cpus = 2
+      clusterOptions = '-A lp_symbiosys'
+   }
+   withLabel:compute_resources__minimal {
+      cpus = 1
+   }
+   withLabel:compute_resources__mem {
+      cpus = 1
+   }
+   withLabel:compute_resources__cpu {
+      cpus = 16
+      memory = '60 GB'
+   }
+   withLabel:compute_resources__report {
+      maxForks = 2
+      cpus = 1
+   }
+   withLabel:compute_resources__24hqueue {
+      time = '24h'
+   }
+   withLabel: 'compute_resources__sratoolkit' {
+      executor = 'local'
+      cpus = 4
+      memory = '40 GB'
+      time = '24h'
+      maxForks = 1
+      maxRetries = 5
+      errorStrategy = 'retry'
+   }
+   withLabel:'compute_resources__scenic.*' {
+      cpus = 4
+      memory = '60 GB'
+      time = '24h'
+      maxForks = 1
+   }
+   withLabel:compute_resources__scenic_grn {
+      cpus = 19
+      memory = '120 GB'
+      time = '24h'
       executor = 'pbs'
    }
-   withLabel:local {
-      executor = 'local'
+   withLabel:compute_resources__scenic_cistarget {
+      cpus = 16
+      memory = '250 GB'
+   }
+   withLabel:compute_resources__scenic_aucell {
+      cpus = 16
+      memory = '250 GB'
+   }
+   withLabel:compute_resources__pcacv {
+      cpus = 16
    }
 }
 
@@ -259,5 +275,5 @@ min {
 singularity {
    enabled = true
    autoMounts = true
-   runOptions = '-B '
+   runOptions = '-B ' // TO EDIT
 }
