Update Ji et al 2019 configs

--- a/jit_2019/10x_harmony_scenic_append_only.config
+++ b/jit_2019/10x_harmony_scenic_append_only.config
@@ -2,29 +2,26 @@ manifest {
    name = 'vib-singlecell-nf/vsn-pipelines'
    description = 'A repository of pipelines for single-cell data in Nextflow DSL2'
    homePage = 'https://github.com/vib-singlecell-nf/vsn-pipelines'
-   version = '0.15.0'
+   version = '0.27.0'
    mainScript = 'main.nf'
    defaultBranch = 'master'
-   nextflowVersion = '!19.12.0-edge'
+   nextflowVersion = '!>=21.04.3'
 }
 
 params {
    global {
-      project_name = '63d972e0__Ji_et_al_2019_Larvae_Wing_Disc'
+      project_name = 'Ji_et_al_2019_Larvae_Wing_Disc'
       outdir = 'out'
-      seed = 142
-      qsubaccount = ''
-      qsubemail = ''
+      seed = 42
+      qsubaccount = '' // TO EDIT
+      qsubemail = '' // TO EDIT
    }
-   sc {
-      scope {
-         genome = 'Flybase r6.31 pre-mRNA v3.1 (https://github.com/FlyCellAtlas/genome_references/blob/master/flybase/r6.31/dmel-all-r6.31-premrna.gtf.gz)'
-         tree {
-            level_1 = 'Public'
-            level_2 = 'Wingdisc'
-            level_3 = 'Larvae'
-         }
+   data {
+      tenx {
+         cellranger_mex = '/a/folder/*/outs/' // TO EDIT
       }
+   }
+   tools {
       file_converter {
          tagCellWithSampleId = true
          useFilteredMatrix = true
@@ -34,7 +31,7 @@ params {
          off = 'h5ad'
       }
       scanpy {
-         container = 'vibsinglecellnf/scanpy:0.5.0'
+         container = 'vibsinglecellnf/scanpy:1.8.1'
          report {
             annotations_to_plot = []
          }
@@ -88,7 +85,6 @@ params {
             geneFilterMinNCells = 3
             off = 'h5ad'
             outdir = 'out'
-      seed = 142
          }
          data_transformation {
             method = 'log1p'
@@ -96,70 +92,71 @@ params {
          }
          normalization {
             method = 'cpx'
-            countsPerCellAfter = 10000
+            targetSum = 10000
             off = 'h5ad'
          }
       }
       harmony {
-         container = 'vibsinglecellnf/harmony:1.0'
+         container = 'vibsinglecellnf/harmony:1.0-3'
          report_ipynb = '/src/harmony/bin/reports/sc_harmony_report.ipynb'
          varsUse = ['batch']
       }
       scenic {
-         container = 'aertslab/pyscenic:0.10.0'
+         container = 'vibsinglecellnf/utils:0.11.2'
          report_ipynb = '/src/scenic/bin/reports/scenic_report.ipynb'
          existingScenicLoom = '63d972e0__Ji_et_al_2019_Larvae_Wing_Disc.BBKNN.SCENIC_SCope_output.loom' // TO EDIT
          sampleSuffixWithExtension = '.BBKNN.SCENIC_SCope_output.loom'
          scenicoutdir = 'out/scenic/'
          scenicScopeOutputLoom = 'SCENIC_SCope_output.loom'
       }
+      scope {
+         genome = 'Flybase r6.31 pre-mRNA v3.1 (https://github.com/FlyCellAtlas/genome_references/blob/master/flybase/r6.31/dmel-all-r6.31-premrna.gtf.gz)'
+         tree {
+            level_1 = 'Public'
+            level_2 = 'Wingdisc'
+            level_3 = 'Larvae'
+         }
+      }
    }
    utils {
-      container = 'vibsinglecellnf/utils:0.2.2'
+      container = 'vibsinglecellnf/utils:0.4.0'
       workflow_configuration {
          report_ipynb = '/src/utils/bin/reports/workflow_configuration_template.ipynb'
       }
    }
-   parseConfig = { sample, paramsGlobal, paramsLocal ->
-         def lv = { a,b -> return org.codehaus.groovy.runtime.MethodRankHelper.delDistance(a, b) }
-         def pL = paramsLocal.collectEntries { k,v ->
-            if (v instanceof Map) {
-               if (v.containsKey(sample))
-                  return [k, v[sample]]
-               if (v.containsKey('default'))
-                  return [k, v['default']]
-               def closeMatches = v.collectEntries { vk, vv -> [lv(vk, sample), vk] }.keySet().findAll { it < 30}
-               if(closeMatches.size() > 0)
-                  throw new Exception("The sample " + sample + " is not found in " + v +" ; Make sure your samples are correctly specified when using the multi-sample feature.")
-               else
-                  return [k,v]
-            } else {
-               return [k,v]
-         }
-      }
-      return [global: paramsGlobal, local: pL]
-   }
-   data {
-      tenx {
-         cellranger_mex = '20200313_007__wingdisc_larvae__63d972e0-6514-11ea-8819-a0000220fe80/out/counts/*/outs/' // TO EDIT
-      }
-   }
    pcacv {
-      container = 'vibsinglecellnf/pcacv:0.1.0'
+      container = 'vibsinglecellnf/pcacv:0.3.0'
       find_optimal_npcs {
          accessor = '@assays$RNA@scale.data'
-         nCores = 12
       }
    }
 }
 
 process {
    executor = 'local'
-   withLabel:qsub {
-      executor = 'pbs'
+   withLabel:'compute_resources__.*|compute_resources__default' {
+      cpus = 2
+      clusterOptions = '-A <group-name>' // TO EDIT
    }
-   withLabel:local {
-      executor = 'local'
+   withLabel:compute_resources__minimal {
+      cpus = 1
+   }
+   withLabel:compute_resources__mem {
+      cpus = 1
+   }
+   withLabel:compute_resources__cpu {
+      cpus = 16
+      memory = '60 GB'
+   }
+   withLabel:compute_resources__report {
+      maxForks = 2
+      cpus = 1
+   }
+   withLabel:compute_resources__24hqueue {
+      time = '24h'
+   }
+   withLabel:compute_resources__pcacv {
+      cpus = 16
    }
 }
 
