Move scope, file_converter and file_concatenator under params.utils and pcacv under params.tools

--- a/jit_2019/10x_bbknn_scenic.config
+++ b/jit_2019/10x_bbknn_scenic.config
@@ -31,14 +31,6 @@ params {
             transcriptome = 'flybase/r6.31_premrna_v3/cellranger/3.1.0/flybase_r6.31_premrna_v3.1'
          }
       }
-      file_converter {
-         tagCellWithSampleId = true
-         useFilteredMatrix = true
-      }
-      file_concatenator {
-         join = 'outer'
-         off = 'h5ad'
-      }
       sratoolkit {
          container = 'vibsinglecellnf/sratoolkit:2.9.4-1.1.0'
          includeTechnicalReads = false
@@ -51,7 +43,7 @@ params {
          }
          feature_selection {
             report_ipynb = '/src/scanpy/bin/reports/sc_select_variable_genes_report.ipynb'
-            method = 'mean_disp_plot'
+            flavor = 'seurat'
             minMean = 0.0125
             maxMean = 3
             minDisp = 0.5
@@ -164,14 +156,6 @@ params {
             nes_threshold = 3.0
          }
       }
-      scope {
-         genome = 'Flybase r6.31 pre-mRNA v3.1 (https://github.com/FlyCellAtlas/genome_references/blob/master/flybase/r6.31/dmel-all-r6.31-premrna.gtf.gz)'
-         tree {
-            level_1 = 'Public'
-            level_2 = 'Wingdisc'
-            level_3 = 'Larvae'
-         }
-      }
    }
    utils {
       container = 'vibsinglecellnf/utils:0.4.0'
@@ -180,6 +164,22 @@ params {
       }
       sra_metadata {
          mode = 'web'
+      }
+      file_converter {
+         tagCellWithSampleId = true
+         useFilteredMatrix = true
+      }
+      file_concatenator {
+         join = 'outer'
+         off = 'h5ad'
+      }
+      scope {
+         genome = 'Flybase r6.31 pre-mRNA v3.1 (https://github.com/FlyCellAtlas/genome_references/blob/master/flybase/r6.31/dmel-all-r6.31-premrna.gtf.gz)'
+         tree {
+            level_1 = 'Public'
+            level_2 = 'Wingdisc'
+            level_3 = 'Larvae'
+         }
       }
    }
 }
