--- a/jit_2019/10x_harmony_scenic_append_only.config
+++ b/jit_2019/10x_harmony_scenic_append_only.config
@@ -22,14 +22,6 @@ params {
       }
    }
    tools {
-      file_converter {
-         tagCellWithSampleId = true
-         useFilteredMatrix = true
-      }
-      file_concatenator {
-         join = 'outer'
-         off = 'h5ad'
-      }
       scanpy {
          container = 'vibsinglecellnf/scanpy:1.8.1'
          report {
@@ -37,7 +29,7 @@ params {
          }
          feature_selection {
             report_ipynb = '/src/scanpy/bin/reports/sc_select_variable_genes_report.ipynb'
-            method = 'mean_disp_plot'
+            flavor = 'seurat'
             minMean = 0.0125
             maxMean = 3
             minDisp = 0.5
@@ -96,6 +88,12 @@ params {
             off = 'h5ad'
          }
       }
+      pcacv {
+         container = 'vibsinglecellnf/pcacv:0.3.0'
+         find_optimal_npcs {
+            accessor = '@assays$RNA@scale.data'
+         }
+      }
       harmony {
          container = 'vibsinglecellnf/harmony:1.0-3'
          report_ipynb = '/src/harmony/bin/reports/sc_harmony_report.ipynb'
@@ -109,6 +107,20 @@ params {
          scenicoutdir = 'out/scenic/'
          scenicScopeOutputLoom = 'SCENIC_SCope_output.loom'
       }
+   }
+   utils {
+      container = 'vibsinglecellnf/utils:0.4.0'
+      workflow_configuration {
+         report_ipynb = '/src/utils/bin/reports/workflow_configuration_template.ipynb'
+      }
+      file_converter {
+         tagCellWithSampleId = true
+         useFilteredMatrix = true
+      }
+      file_concatenator {
+         join = 'outer'
+         off = 'h5ad'
+      }
       scope {
          genome = 'Flybase r6.31 pre-mRNA v3.1 (https://github.com/FlyCellAtlas/genome_references/blob/master/flybase/r6.31/dmel-all-r6.31-premrna.gtf.gz)'
          tree {
@@ -116,18 +128,6 @@ params {
             level_2 = 'Wingdisc'
             level_3 = 'Larvae'
          }
-      }
-   }
-   utils {
-      container = 'vibsinglecellnf/utils:0.4.0'
-      workflow_configuration {
-         report_ipynb = '/src/utils/bin/reports/workflow_configuration_template.ipynb'
-      }
-   }
-   pcacv {
-      container = 'vibsinglecellnf/pcacv:0.3.0'
-      find_optimal_npcs {
-         accessor = '@assays$RNA@scale.data'
       }
    }
 }
