--- a/pbmc10k/pbmc10k.vsn-pipelines.complete.config
+++ b/pbmc10k/pbmc10k.vsn-pipelines.complete.config
@@ -1,18 +1,11 @@
-singularity {
-   cacheDir = '/ddn1/vol1/staging/leuven/stg_00002/lcb/lcb_projects/Pipeline_Dev/containers/'
-   enabled = true
-   autoMounts = true
-   runOptions = '-B /ddn1/vol1/staging/leuven/stg_00002/,/staging/leuven/stg_00002/'
-}
-
 manifest {
    name = 'vib-singlecell-nf/vsn-pipelines'
    description = 'A repository of pipelines for single-cell data in Nextflow DSL2'
    homePage = 'https://github.com/vib-singlecell-nf/vsn-pipelines'
-   version = '0.14.0'
+   version = '0.27.0'
    mainScript = 'main.nf'
    defaultBranch = 'master'
-   nextflowVersion = '!19.12.0-edge'
+   nextflowVersion = '!>=21.04.3'
 }
 
 params {
@@ -27,27 +20,20 @@ params {
          assembly = 'hg38'
       }
    }
-   sc {
-      scope {
-         genome = ''
-         tree {
-            level_1 = 'SCENICprotocol'
-            level_2 = 'DSL2'
-            level_3 = ''
-         }
+   data {
+      tenx {
+         cellranger_mex = '/staging/leuven/stg_00002/lcb/cflerin/analysis/pbmc10k/dsl2_0.19.0/pbmc10k/'
       }
-      file_converter {
-         tagCellWithSampleId = true
-         useFilteredMatrix = true
-      }
+   }
+   tools {
       scanpy {
-         container = 'vibsinglecellnf/scanpy:0.5.0'
+         container = 'vibsinglecellnf/scanpy:1.8.1'
          report {
             annotations_to_plot = []
          }
          feature_selection {
             report_ipynb = '/src/scanpy/bin/reports/sc_select_variable_genes_report.ipynb'
-            method = 'mean_disp_plot'
+            flavor = 'seurat'
             minMean = 0.0125
             maxMean = 3
             minDisp = 0.5
@@ -59,14 +45,12 @@ params {
             off = 'h5ad'
          }
          neighborhood_graph {
-            nPcs = 50
             off = 'h5ad'
          }
          dim_reduction {
             report_ipynb = '/src/scanpy/bin/reports/sc_dim_reduction_report.ipynb'
             pca {
                method = 'pca'
-               nComps = 50
                off = 'h5ad'
             }
             umap {
@@ -81,14 +65,13 @@ params {
          }
          clustering {
             report_ipynb = '/src/scanpy/bin/reports/sc_clustering_report.ipynb'
-            method = 'louvain'
+            methods = ['louvain']
             resolutions = [0.4,0.8]
             off = 'h5ad'
          }
          marker_genes {
             method = 'wilcoxon'
             ngenes = 0
-            groupby = 'louvain'
             off = 'h5ad'
          }
          filter {
@@ -106,12 +89,12 @@ params {
          }
          normalization {
             method = 'cpx'
-            countsPerCellAfter = 10000
+            targetSum = 10000
             off = 'h5ad'
          }
       }
       scenic {
-         container = 'aertslab/pyscenic:0.10.0'
+         container = 'aertslab/pyscenic:0.11.2'
          scenicoutdir = 'out/scenic/'
          report_ipynb = '/src/scenic/bin/reports/scenic_report.ipynb'
          filteredLoom = ''
@@ -119,15 +102,11 @@ params {
          scenicScopeOutputLoom = 'SCENIC_SCope_output.loom'
          mode = 'dask_multiprocessing'
          client_or_address = ''
-         numWorkers = 20
          cell_id_attribute = 'CellID'
          gene_attribute = 'Gene'
          grn {
             algorithm = 'grnboost2'
-            pmem = '2gb'
-            maxForks = 1
-            numWorkers = 20
-            tfs = '/ddn1/vol1/staging/leuven/stg_00002/lcb/cflerin/resources/allTFs_hg38.txt'
+            tfs = '/staging/leuven/stg_00002/lcb/cflerin/resources/allTFs_hg38.txt'
          }
          cistarget {
             adj = 'adj.tsv'
@@ -143,9 +122,6 @@ params {
             top_n_targets = 50
             top_n_regulators = '5,10,50'
             min_genes = 20
-            pmem = '2gb'
-            maxForks = 1
-            numWorkers = 20
             motifsDb = '/staging/leuven/res_00001/databases/cistarget/databases/homo_sapiens/hg38/refseq_r80/mc9nr/gene_based/hg38__refseq-r80__*feather'
             motifsAnnotation = '/staging/leuven/res_00001/databases/cistarget/motif2tf/motifs-v9-nr.hgnc-m0.001-o0.0.tbl'
             tracksDb = '/staging/leuven/res_00001/databases/cistarget/databases/homo_sapiens/hg38/refseq_r80/tc_v1/gene_based/encode_20190621__ChIP_seq_transcription_factor.hg38__refseq-r80__*feather'
@@ -156,49 +132,93 @@ params {
             rank_threshold = 5000
             auc_threshold = 0.05
             nes_threshold = 3.0
-            pmem = '2gb'
-            maxForks = 1
-            numWorkers = 20
          }
       }
    }
    utils {
-      container = 'vibsinglecellnf/utils:0.2.1'
+      container = 'vibsinglecellnf/utils:0.4.0'
       workflow_configuration {
          report_ipynb = '/src/utils/bin/reports/workflow_configuration_template.ipynb'
       }
-   }
-   parseConfig = { sample, paramsGlobal, paramsLocal ->
-        def lv = { a,b -> return MethodRankHelper.delDistance(a, b) }
-        def pL = paramsLocal.collectEntries { k,v ->
-           if (v instanceof Map) {
-                if (v.containsKey(sample))
-                   return [k, v[sample]]
-                if (v.containsKey('default'))
-                   return [k, v['default']]
-                if (lv(k,sample) > 30)
-                   return [k,v]
-                throw new Exception("Not a valid entry in " + k + ". The sample " + sample + " is not found in " + v +" ; Make sure your samples are correctly specified when using the multi-sample feature.")
-           } else {
-               return [k,v]
-           }
-       }
-       return [global: paramsGlobal, local: pL]
-   }
-   data {
-      tenx {
-         cellranger_mex = '/ddn1/vol1/staging/leuven/stg_00002/lcb/cflerin/analysis/pbmc10k/dsl2/pbmc10k/outs'
+      sra_metadata {
+         mode = 'web'
+      }
+      file_converter {
+         tagCellWithSampleId = true
+         useFilteredMatrix = true
+      }
+      scope {
+         genome = ''
+         tree {
+            level_1 = 'SCENICprotocol'
+            level_2 = 'DSL2'
+            level_3 = ''
+         }
       }
    }
 }
 
 process {
    executor = 'local'
-   withLabel:qsub {
+   withLabel: 'compute_resources__cellranger_count' {
+        executor = 'pbs' // or 'local'
+        cpus = 20
+        memory = '120 GB'
+        time = '48h'
+        maxForks = 5
+   }
+   withLabel:'compute_resources__.*|compute_resources__default' {
+      cpus = 2
+      clusterOptions = '-A lp_symbiosys'
+   }
+   withLabel:compute_resources__minimal {
+      cpus = 1
+   }
+   withLabel:compute_resources__mem {
+      cpus = 1
+   }
+   withLabel:compute_resources__cpu {
+      cpus = 16
+      memory = '60 GB'
+   }
+   withLabel:compute_resources__report {
+      maxForks = 2
+      cpus = 1
+   }
+   withLabel:compute_resources__24hqueue {
+      time = '24h'
+   }
+   withLabel: 'compute_resources__sratoolkit' {
+      executor = 'local'
+      cpus = 4
+      memory = '40 GB'
+      time = '24h'
+      maxForks = 1
+      maxRetries = 5
+      errorStrategy = 'retry'
+   }
+   withLabel:'compute_resources__scenic.*' {
+      cpus = 4
+      memory = '60 GB'
+      time = '24h'
+      maxForks = 1
+   }
+   withLabel:compute_resources__scenic_grn {
+      cpus = 19
+      memory = '120 GB'
+      time = '24h'
       executor = 'pbs'
    }
-   withLabel:local {
-      executor = 'local'
+   withLabel:compute_resources__scenic_cistarget {
+      cpus = 16
+      memory = '250 GB'
+   }
+   withLabel:compute_resources__scenic_aucell {
+      cpus = 16
+      memory = '250 GB'
+   }
+   withLabel:compute_resources__pcacv {
+      cpus = 16
    }
 }
 
@@ -224,4 +244,11 @@ dag {
 
 min {
    enabled = false
+}
+
+singularity {
+   cacheDir = '/staging/leuven/stg_00002/lcb/lcb_projects/Pipeline_Dev/containers/'
+   enabled = true
+   autoMounts = true
+   runOptions = '-B /staging/leuven/stg_00002/,/staging/leuven/stg_00002/'
 }
